{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "InGame",
            "id": "f1c6b1c2-903d-4395-a0cb-a7e9b7ae17ac",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1ba90df6-b3c7-429e-b848-4c465c2e01dc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Climb",
                    "type": "Value",
                    "id": "c40d17df-0e16-438e-9ae2-32504c8a0053",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "19194e89-bf9c-4614-9401-ac8d2b897fc2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "17651648-119e-46e0-a6f0-a1eb0b546aa7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "483e7a7d-2b43-4f65-9d24-d36a0f45ff8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AimStickX",
                    "type": "Value",
                    "id": "cc0f037b-d482-4d8b-b80f-b44eff4d2018",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AimStickY",
                    "type": "Value",
                    "id": "0d5e7ebf-8148-46c7-b9d3-a2a2fe82942b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "36ea913a-976d-4fec-87b8-d2cc72a7c1a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "c516c5d3-d04f-4d19-955f-4714dba65a57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NormalArrow",
                    "type": "Button",
                    "id": "b35498ed-4261-40b3-ac02-e8735a123ebf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ParanoidArrow",
                    "type": "Button",
                    "id": "7de3a380-8cb4-49b6-bd31-434d9634a22f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BlindArrow",
                    "type": "Button",
                    "id": "88b1a038-edde-42bd-a47e-5f3f1e2d5d71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eaef1faa-6dca-4ab0-a81c-49b9a62aa4c0",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4ef955c-6e5d-4d57-9da5-b9bd629e57c4",
                    "path": "<XInputController>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f917818-ab47-45b9-aa13-4657ef05a772",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c77ac184-196f-4bce-a856-c5bb24920137",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a83dbb15-98cc-4ab3-824d-9b7d5d0f10ab",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9300d1b8-e46e-43bf-82bc-7316dd7a1c9c",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AimStickX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "711c3338-ecf7-4958-88ad-f0195b3897dc",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fb71c81-9749-4853-8326-568e54059f87",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65ba0208-796c-4a5b-9b04-66d40c40223f",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fdfd7e2-e96f-47ef-9eb6-8ba3f623f521",
                    "path": "<XInputController>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5110369e-9c1f-4c18-88b1-a079b55b1818",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "NormalArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17643033-5753-4113-b290-04b2234a9ee2",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ParanoidArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6730e49-df07-4f89-9323-87989e2f803f",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlindArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35e3994a-72af-459f-8e04-9139716a7c24",
                    "path": "<XInputController>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AimStickY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "dec6f55c-01e7-4a03-b3ac-b827af516462",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "KB & Mouse",
            "bindingGroup": "KB & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}